<resources>
    <string name="app_name">tcamViewer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_camera">Camera</string>
    <string name="title_settings">Settings</string>
    <string name="title_library">Library</string>
    <string name="agc">AGC</string>
    <string name="gain">Gain</string>
    <string name="auto">Auto</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="camera_settings">CAMERA SETTINGS</string>
    <string name="wifi_network">WiFi/Network</string>
    <string name="application_settings">Application Settings</string>
    <string name="emissivity">Emissivity \%</string>
    <string name="export_picture_on_save">Export Picture on Save</string>
    <string name="save_picture_on_save">Export Picture on Save</string>
    <string name="export_metadata">Export Metadata</string>
    <string name="export_resolution">Export Resolution</string>
    <string name="manual_range">Manual Range</string>
    <string name="shutter_sound">Shutter Sound</string>
    <string name="spotmeter">Spotmeter</string>
    <string name="units">Units</string>
    <string name="version">Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="camera_ip_address">Camera IP Address</string>
    <string name="palette">Palette</string>
    <string name="connect">connect</string>
    <string name="get">get</string>
    <string name="disconnect">disconnect</string>
    <string name="get_image">Get Image</string>
    <string name="acquiring">Acquiring...</string>
    <string name="exit">Exit</string>
    <string name="browse">Browse</string>
    <string name="save">Save</string>
    <string name="export">Export</string>
    <string name="quit">Quit</string>
    <string name="open">Open</string>
    <string name="display_spot_meter">Display Spot Meter</string>
    <string name="camera_config">Camera Configuration</string>
    <string name="camera_is_access_point">Camera is Access Point</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="use_static_ip_when_client">Use Static IP when Client</string>
    <string name="client_static_ip_address">Client Static IP Address</string>
    <string name="client_static_ip_netmask">Client Static IP Netmask</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete">delete</string>
    <string name="share">Share</string>
<!--    DEBUGGING-->
    <string name="info">INFO</string>
    <string name="item_info_title">[Section Item Info]</string>
    <string name="pos_in_section">Position in section:</string>
    <string name="pos_in_adapter">Position in adapter:</string>
    <string name="view_type">View type:</string>
    <string name="has_header">Has header?</string>
    <string name="has_footer">Has footer?</string>
    <string name="header_pos">"Header position:</string>
    <string name="footer_pos">"Footer position:</string>
    <string name="section_info_title">[Section Info]</string>
    <string name="close">CLOSE</string>
    <string name="warning_disconnect">Changing this setting will disconnect the camera when the settings are saved</string>
    <string name="error_can_not_connect">Failed to connect to camera, please check that the camera is turned on and the camera ip address is correct</string>
    <string name="title_error">Error</string>
    <string name="file">File</string>
    <string name="warning_password">Invalid or missing password</string>
    <string name="title_warning">Warning</string>
    <string name="save_settings_with_warning">Do you wish to save your settings?\nChanging these settings will disconnect the camera</string>
    <string name="agc_changes_info">AGC mode changes will be applied to the next GET image</string>
    <string name="appName">tcamViewer</string>
    <string name="nothing_to_selected_to_delete">Nothing selected to delete</string>
    <string name="nothing_selected_to_browse">Nothing selected to browse</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="stream">Stream</string>
    <string name="warning_ssid">Invalid or missing SSID name</string>
    <string name="socket_error">The connection to the camera can not be established, please check your settings and try again</string>
    <string name="you_must_specify_filename">You must specify a filename for the image</string>
    <string name="enter_name_for_shared_image">Enter name for shared file</string>
    <string name="changing_spot_meter_not_available">Changing the spot meter location is not available in AGC mode</string>
    <string name="emissivity_too_low">Emissivity value is missing or too low, setting it to 1</string>
    <string name="emissivity_too_high">emissivity value is too high, setting it to 100</string>
    <string name="invalid_range_value">Invalid range value, setting it to default</string>
    <string name="invalid_emissivity_value">Invalid or missing emissivity value, setting it to 1</string>
    <string name="record">Record</string>
    <string name="filetype_not_mtjsn">Filetype must be \'.mtjsn\', nothing recorded</string>
    <string name="play">Play</string>
    <string name="analyze">Analyze</string>
    <string name="recording">rec</string>
    <string name="image">Image</string>
    <string name="raw">Raw</string>
    <string name="image_raw">Image+Raw</string>
    <string name="export_raw">Export TJSN</string>
    <string name="AGC">AGC</string>
    <string name="please_grant_write_external_storage">Please grant write external storage</string>
    <string name="saving_movie">Saving Video Stream as</string>
    <string name="scan_for_camera">Scan for Camera</string>
    <string name="camera">CAMERA</string>
    <string name="ip_address">IP ADDRESS</string>
    <string name="title_camera_discovery">Camera Discovery</string>
</resources>