<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save"
        android:visible="true"
        android:title="@string/save"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_connect"
        android:title="@string/connect"
        android:icon="@drawable/bolt_30_30"
        android:visible="true"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_disconnect"
        android:title="@string/disconnect"
        android:icon="@drawable/bolt_30_30"
        android:visible="false"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_get"
        android:title="@string/get"
        android:icon="@drawable/camera_30_30"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_stream"
        android:title="Stream"
        android:icon="@drawable/video_camera_no_t_30_30"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_palette"
        android:title="@string/palette"
        android:icon="@drawable/palette_30_30"
        app:showAsAction="ifRoom|withText">
        <menu></menu>
    </item>
</menu>