<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_item_out"
        android:title="@string/save"
        android:icon="@drawable/ic_baseline_share_24"
        android:visible="true"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/action_item_share"
                android:title="@string/share"
                android:icon="@drawable/ic_baseline_share_24"
                android:visible="true"/>
            <item android:id="@+id/action_item_export"
                android:title="@string/export"
                android:icon="@drawable/ic_baseline_share_24"
                android:visible="true"/>
            <item android:id="@+id/action_item_export_tjsn"
                android:title="@string/export_raw"
                android:icon="@drawable/ic_baseline_share_24"
                android:visible="true"/>
        </menu>
    </item>
    <item android:id="@+id/action_item_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:visible="true"
        app:showAsAction="always" />
<!--    <item android:id="@+id/action_recording"-->
<!--        android:title="@string/recording"-->
<!--        android:icon="@drawable/film_30_30"-->
<!--        android:visible="true"-->
<!--        app:showAsAction="always">-->
<!--        <menu>-->
<!--            <item android:id="@+id/action_movie_play"-->
<!--                android:title="@string/play"-->
<!--                android:icon="@drawable/ff_w_20_20"-->
<!--                android:visible="true"/>-->
<!--            <item android:id="@+id/action_movie_analyze"-->
<!--                android:title="@string/analyze"-->
<!--                android:icon="@drawable/ic_baseline_share_24"-->
<!--                android:visible="true"/>-->
            <item android:id="@+id/action_movie_save"
                android:title="Save"
                android:icon="@drawable/file_save_30_30"
                android:visible="true"
                app:showAsAction="always"/>
<!--        </menu>-->
<!--    </item>-->
</menu>