<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_camera">

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.darcangel.tcamViewer.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_navigation_camera_to_navigation_library2"
            app:destination="@id/navigation_library" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.darcangel.tcamViewer.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_wiFiSettingsFragment"
            app:destination="@id/wifiSettingsFragment" />
        <action
            android:id="@+id/action_navigation_settings_to_navigation_camera"
            app:destination="@id/navigation_camera" />
        <action
            android:id="@+id/action_navigation_settings_to_privacyDisclosure"
            app:destination="@id/privacyDisclosure" />
    </fragment>

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.darcangel.tcamViewer.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_navigation_library_to_navigation_camera"
            app:destination="@id/navigation_camera" />
        <action
            android:id="@+id/action_navigation_library_to_navigation_librarySlideShowFragment"
            app:destination="@id/navigation_librarySlideShowFragment" />
    </fragment>
    <fragment
        android:id="@+id/wifiSettingsFragment"
        android:name="com.darcangel.tcamViewer.ui.settings.WiFiSettingsFragment"
        android:label="WiFi/Network Settings"
        tools:layout="@layout/fragment_wifi_settings">
        <action
            android:id="@+id/action_wiFiSettingsFragment_to_navigation_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_wiFiSettingsFragment_to_navigation_camera"
            app:destination="@id/navigation_camera" />
    </fragment>
    <fragment
        android:id="@+id/privacyDisclosure"
        android:name="com.darcangel.tcamViewer.ui.settings.PrivacyDisclosure"
        android:label="PrivacyDisclosure" >
        <action
            android:id="@+id/action_privacyDisclosure_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>
    <fragment
        android:id="@+id/navigation_librarySlideShowFragment"
        tools:layout="@layout/fragment_library_slideshow"
        android:name="com.darcangel.tcamViewer.ui.library.LibrarySlideShowFragment"
        android:label="LibrarySlideShowFragment" >
        <action
            android:id="@+id/action_librarySlideShowFragment_to_navigation_library"
            app:destination="@id/navigation_library" />
    </fragment>
</navigation>